--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     </style>
 </head>
 <body>
-<ul id="usersList">
+<input type="text">
+
+<button>Load tasks</button>
+<button>Post tasks</button>
+<!--<ul id="usersList">
     <li id="0" class="userListItem">
         <div class="profilePictureContainer">
             <img src="" alt="#">
@@ -53,7 +57,7 @@
         <h3 class="userFullName">Java Script</h3>
 
     </li>
-</ul>
+</ul>-->
 <script src="./assets/js/index.js"></script>
 </body>
 </html>
